<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UNCC Game Day</string>
    <string name="action_alert_settings">Alert Settings</string>
    <string name="hello_world">Welcome to UNCC GameDay!</string>
    <string name="title_activity_parking">Parking</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_acivity_home">Home</string>
    <string name="title_activity_alerts">Alerts</string>
    <string name="alerts_label_alerts_to_receive">Select Alerts to Receive:</string>
    <string name="alerts_check_timed">Timed (Reserve Ticket&#8230;)</string>
    <string name="button_clear_alerts">Clear Alerts</string>
    <string name="alerts_check_organizations">Organizations</string>
    <string name="alerts_check_university">University</string>
    <string name="home_label_recent_alerts">Recent Alerts:</string>
    <string name="gameday_handle">UNCCGameDay</string>
    <string name="university_handle">unccharlotte</string>
    <string name="db_path">Gameday.sqlite</string>
    <string name="preferences_file">GamedayPreferences</string>
    <string name="server_hostname">uncc-gameday.no-ip.org</string> 
    <string name="student_check_in">Student Check-In</string>
    <string name="student_first_name">First Name:</string>
    <string name="student_last_name">Last Name:</string>
    <string name="section_number">Section:</string>
    <string name="row_number">Row:</string>
    <string name="check_box_broadcast">Broadcast Information</string>
    <string name="organization_check_in">Organization Name:</string>
    <string name="organization_location">Location:</string>
    <string name="organization_prizes">Prizes/Giveaways:</string>
    <string name="organization_comments">Comments:</string>
    <string name="registration_view_check_ins">View Check-In List</string>
    <string name="button_save">Save</string>
    <string name="title_parking_selection">Select a Parking Lot</string>
    <string name="button_get_alerts">Get Alerts</string>
    <string name="select_university_alerts">University Alerts</string>
    <string name="select_organization_alerts">Organization Alerts</string>
    <string name="select_twitter_alerts">Twitter Alerts</string>
    
    <string name="black_lot">Black Lot</string>
    <string name="green_lot">Green Lot</string>
    <string name="red_lot">Red Lot</string>
    <string name="blue_lot">Blue Lot</string>
    <string name="silver_lot">Silver Lot</string>
    <string name="orange_lot">Orange Lot</string>
    <string name="yellow_lot">Yellow Lot</string>
    <string name="purple_lot">Purple Lot</string>
    <string name="pink_lot">Pink Lot</string>
    <string name="white_lot">White Lot</string>
    <string name="gold_lot">Gold Lot</string>
    <string name="title_enter_location">Enter a city:</string>
    <string name="button_clear_parking_choices">Clear Selections</string>
    <string name="button_get_lot_info">Get Parking Info</string>
    <string name="button_register">Register</string>
    <string name="registration_comments">Comments:</string>
    <string name="parking_map">Parking Map</string>
    <string name="zoom_map">Parking Map</string>
    <string name="search_hint">Enter and Organization/Person:</string>
    <string name="search_text">Find who else is attending the UNCC football game! \n \nEnter the name of a person or organization into the search bar above.</string>  
    <string name="button_refresh_alerts">Refresh Alerts</string>
    <string name="rate_lot">Rate Lot:</string>
    <string name="empty_lot">Empty</string>
    <string name="full_lot">Full </string>
    <string name="submit_rating">Submit Rating</string>
    <string name="filled_status">Filled Status</string>
    <string name="crowd">Crowd</string>
    <string name="title_activity_search_rsvp">RSVP Search</string>
    <string name="internet_down_error">Internet access is currently unavailable.</string>
</resources>
