<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#7d9a43"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/alerts_label_alerts_to_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alerts_label_alerts_to_receive"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/alerts_check_timed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alerts_check_timed"
        android:textColor="@color/black" 
        android:onClick="onClickTimedAlerts" />

    <CheckBox
        android:id="@+id/alerts_check_organizations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alerts_check_organizations"
        android:textColor="@color/black" 
        android:onClick="onClickOrganizationAlerts" />

    <CheckBox
        android:id="@+id/alerts_check_university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alerts_check_university"
        android:textColor="@color/black" 
        android:onClick="onClickUniversityAlerts" />

    <Button
        android:id="@+id/getAlertsButton"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/button_get_alerts"
        android:textColor="@color/black" />

</LinearLayout>