<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <TextView
        android:id="@+id/alertsChoicesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:textIsSelectable="true" 
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/getAlertsButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get_alerts" />
    

    
     

    <RadioGroup
        android:id="@+id/alertChoicesRadioGrou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/UniversityRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_university_alerts" />

        <RadioButton
            android:id="@+id/OraganizationRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_organization_alerts" />

        <RadioButton
            android:id="@+id/StudentRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_twitter_alerts" />
    </RadioGroup>
    
   </TableRow> 
