<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#7d9a43"
    tools:context=".Registration"
    tools:ignore="Overdraw" >

    <TextView
        android:id="@+id/studentFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/student_first_name"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/studentLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/studentFirstName"
        android:layout_marginTop="40dp"
        android:text="@string/student_last_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/sectionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/studentLastName"
        android:layout_marginTop="40dp"
        android:text="@string/section_number"
        android:textColor="@color/black" 
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/studentRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sectionNumber"
        android:layout_marginTop="40dp"
        android:text="@string/row_number"
        android:textColor="@color/black" 
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editStudentFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/studentFirstName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorLink="@color/black" >

        <requestFocus android:layout_height="match_parent" />

    </EditText>

    <EditText
        android:id="@+id/editStudentLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/studentLastName"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/editSectionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sectionNumber"
        android:layout_below="@+id/sectionNumber"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editRowNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/studentRow"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/checkBoxBroadcastInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editRowNumber"
        android:layout_below="@+id/editRowNumber"
        android:layout_marginTop="20dp"
        android:text="@string/check_box_broadcast"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/button_register"
        android:textColor="@color/black"
        android:onClick="onClick" />

</RelativeLayout>
